force-app/main/default/objects/IF_Config__mdt/IF_Config__mdt.object-meta.xml
<CustomObject>
    <description>Interface 관련 Callout정보를 관리</description>
    <label>IF_Config</label>
    <pluralLabel>IF_Config</pluralLabel>
</CustomObject>