force-app/main/default/objects/IF_Config__mdt/fields/AddHeader__c.field-meta.xml
<CustomField>
    <fullName>AddHeader__c</fullName>
    <description>Header 정보</description>
    <inlineHelpText>Header 정보</inlineHelpText>
    <label>AddHeader</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>