force-app/main/default/objects/IF_Config__mdt/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <description>Header의 Content Type 정보</description>
    <inlineHelpText>Header의 Content Type 정보</inlineHelpText>
    <label>ContentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>