force-app/main/default/objects/IF_Config__mdt/fields/CreateType__c.field-meta.xml
<CustomField>
    <fullName>CreateType__c</fullName>
    <label>CreateType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>