force-app/main/default/objects/IF_Config__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Callout 할 URL 정보</description>
    <inlineHelpText>Callout 할 URL 정보</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>