force-app/main/default/objects/IF_Config__mdt/fields/InterfaceId__c.field-meta.xml
<CustomField>
    <fullName>InterfaceId__c</fullName>
    <description>Interface를 구분하는 ID</description>
    <inlineHelpText>Interface를 구분하는 ID</inlineHelpText>
    <label>InterfaceId</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>