force-app/main/default/objects/IF_Config__mdt/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>HTTP METHOD로 POST, GET, PUT, DELETE 이 4가지의 Method를 가지고 CRUD를 처리</description>
    <inlineHelpText>HTTP METHOD로 POST, GET, PUT, DELETE 이 4가지의 Method를 가지고 CRUD를 처리</inlineHelpText>
    <label>Method</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>