force-app/main/default/objects/IF_Config__mdt/fields/SystemInfo__c.field-meta.xml
<CustomField>
    <fullName>SystemInfo__c</fullName>
    <description>- 대상 타겟 정보 생성</description>
    <label>System Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>